Fixed button alignment

--- a/src/button/styles/global.less
+++ b/src/button/styles/global.less
@@ -14,6 +14,9 @@
 
 .tw-button {
   display: inline-block;
+  line-height: 20px;
+  width: 20px;
+  height: 20px;
 }
 
 .tw-popup {
